--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  supabase_flutter: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -77,7 +78,7 @@ flutter:
   # example:
   fonts:
     - family: josefin-sans
-      fonts: 
+      fonts:
         - asset: "assets/fonts/JosefinSans-SemiBold.ttf"
   #         style: italic
   #   - family: Trajan Pro
