--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,7 +7,7 @@ allprojects {
 
 rootProject.buildDir = '../build'
 subprojects {
-    project.buildDir = "${rootProject.buildDir}/${project.name}"
+    project.buildDir = String.valueOf(rootProject.buildDir) + '/' + String.valueOf(project.name)
 }
 subprojects {
     project.evaluationDependsOn(':app')
