--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   supabase_flutter: ^2.0.0
+  video_player: ^2.9.2
 
 dev_dependencies:
   flutter_test:
@@ -65,13 +66,16 @@ flutter:
     - assets/images/home_bg.jpg
     - assets/images/profile_bg.jpg
     - assets/images/login_bg.jpg
+    - assets/videos/frog_video.mp4
+    - assets/videos/tree_video.mp4
+    - assets/videos/wave_video.mp4
       # An image asset can refer to one or more resolution-specific "variants", see
       # https://flutter.dev/assets-and-images/#resolution-aware
 
       # For details regarding adding assets from package dependencies, see
       # https://flutter.dev/assets-and-images/#from-packages
 
-      # To add custom fonts to your application, add a fonts section here,
+    # To add custom fonts to your application, add a fonts section here,
     # in this "flutter" section. Each entry in this list should have a
     # "family" key with the font family name, and a "fonts" key with a
     # list giving the asset and other descriptors for the font. For
